Fixed preview overflow bug

--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -7,8 +7,9 @@
     background-color: white;
     border: none;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    overflow-wrap: break-word;
     width: 21cm;
-    height: 29.7cm;
+    min-height: 29.7cm;
     page-break-before: auto;
 }
 
